--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
   </head>
   <body>
     <h1>Hello Everyone</h1>
+    <h2>Lorem ipussum</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis eos nihil libero quos ut? Veniam incidunt voluptatibus sunt quo voluptatem?</p>
   </body>
 </html>
