Try the background

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
     <title>An</title>
   </head>
-  <body>
+  <body class="colorful-dynamic-bg">
     <h1>Hello Everyone</h1>
     <h2>Lorem ipussum</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis eos nihil libero quos ut? Veniam incidunt voluptatibus sunt quo voluptatem?</p>
