--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
-<html>
-  <head>
-    <title>An</title>
-  </head>
-  <body class="colorful-dynamic-bg">
-    <h1>Hello Everyone</h1>
-    <h2>Lorem ipussum</h2>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Perspiciatis eos nihil libero quos ut? Veniam incidunt voluptatibus sunt quo voluptatem?</p>
-  </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Web</title>
+  <link href="index.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+</head>
+<body>
+  <div class="h-screen w-screen colorful-dynamic-bg">
+    <div>
+      <h1>Hi, Iam AP</h1>
+      <p>A Web Developer</p>
+    </div>
+    <div>
+      <h2>Contact Information</h2>
+      <ul>
+        <li>Email: <a href="mailto:123@gmail.com">a</a></li>
+        <li>GitHub: <a></a></li>
+        <li>Linkedin: <a href=""></a></li>
+      </ul>
+    </div>
+  </div>
+</body>
 </html>
