Outline of the CV

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-  <div class="h-screen w-screen colorful-dynamic-bg">
-    <div>
+  <div class="h-screen
+   w-screen bg-[#015A78]">
+    <div class="w-screen h-[30%] colorful-dynamic-bg z-1">
       <h1>Hi, Iam AP</h1>
       <p>A Web Developer</p>
     </div>
@@ -21,6 +22,32 @@
         <li>Linkedin: <a href=""></a></li>
       </ul>
     </div>
+    <div>
+      <h2>Technical Skills</h2>
+      <ul>
+        <li>HTML</li>
+        <li>CSS</li>
+        <li>JavaScript</li>
+        <li>React</li>
+      </ul>
+    </div>
+    <div>
+      <h2>Project</h2>
+      <p>Though I am new to web development, here is beginner project I have worked on: </p>
+      <ul>
+        <li>UI/UX Portfolio - A simple website showcasing my learning Google UX Design Specialization</li>
+      </ul>
+    </div>
+    <div>
+      <h2>Education</h2>
+      <ul>
+        <li>Google IT Support Specialization</li>
+        <li>Google UX Design Specialization</li>
+        <li>The Complete 2023 Web Development Bootcamp - Udemy</li>
+      </ul>
   </div>
+  <footer>
+    <p>Created by AP</p>
+  </footer>
 </body>
 </html>
