--- a/index.html
+++ b/index.html
@@ -7,29 +7,32 @@
   <link href="index.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-  <div class="h-screen
-   w-screen bg-[#015A78]">
-    <div class="w-screen h-[30%] colorful-dynamic-bg z-1">
-      <h1>Hi, Iam AP</h1>
-      <p>A Web Developer</p>
+<body class=" text-white font-sans">
+  <div class="h-screen w-screen flex flex-col bg-[#015A78] items-center">
+    <div class="w-screen h-[30%] colorful-dynamic-bg z-1 flex flex-col items-center justify-center text-center">
+      <h1 class=" md:text-6xl font-bold text-[#75DCFF]">Hi, Iam AP</h1>
+      <p class="text-xl md:text-2xl mt-2 text-white">A Passionate Web Developer</p>
     </div>
-    <div>
-      <h2>Contact Information</h2>
-      <ul>
-        <li>Email: <a href="mailto:123@gmail.com">a</a></li>
-        <li>GitHub: <a></a></li>
-        <li>Linkedin: <a href=""></a></li>
-      </ul>
-    </div>
-    <div>
-      <h2>Technical Skills</h2>
-      <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
-        <li>React</li>
-      </ul>
+
+    <div class="flex flex-col md:flex-row justify-center items-start w-[90%] max-w-5xl mt-10 space-y-6 md:space-y-0 md:space-x-6">
+      <div class="bg-white bg-opacity-10 backdrop-blur-md rounded-lg p-6 hover:bg-opacity-20 transition-all shadow-md w-full md:w-1/3">
+        <h2 class="text-2xl font-semibold text-[#75DCFF]">Contact Information</h2>
+        <ul class="mt-4 space-y-3">
+          <li>Email: <a href="mailto:123@gmail.com" class="text-[#72CDC1] hover:underline"></a></li>
+          <li>GitHub: <a href="https://github.com/yourgithub" class="text-[#72CDC1] hover:underline"></a></li>
+          <li>LinkedIn: <a href="https://linkedin.com/in/yourprofile" class="text-[#72CDC1] hover:underline"></a></li>
+        </ul>
+      </div>
+
+      <div class="bg-white bg-opacity-10 backdrop-blur-md rounded-lg p-6 hover:bg-opacity-20 transition-all shadow-md w-full md:w-1/3">
+        <h2 class="text-2xl font-semibold text-[#75DCFF]">Technical Skills</h2>
+        <ul class="mt-4 space-y-3">
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>JavaScript</li>
+          <li>React</li>
+        </ul>
+      </div>
     </div>
     <div>
       <h2>Project</h2>
