--- a/index.html
+++ b/index.html
@@ -7,50 +7,66 @@
   <link href="index.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class=" text-white font-sans">
-  <div class="h-screen w-screen flex flex-col bg-[#015A78] items-center">
-    <div class="w-screen h-[30%] colorful-dynamic-bg z-1 flex flex-col items-center justify-center text-center">
-      <h1 class=" md:text-6xl font-bold text-[#75DCFF]">Hi, Iam AP</h1>
-      <p class="text-xl md:text-2xl mt-2 text-white">A Passionate Web Developer</p>
-    </div>
+<body class="bg-cyan-950 text-white">
+  <header class="w-screen h-80 md:h-96 z-1 relative flex flex-col justify-center items-center">
+    <h1 class="text-6xl md:text-8xl text-[#75DCFF] font-bold tracking-wider animate-fade-in">Hi, I'm ...</h1>
+    <p class="mt-4 text-xl md:text-2xl opacity-80 animate-slide-in">A Web Developer</p>
+  </header>
 
-    <div class="flex flex-col md:flex-row justify-center items-start w-[90%] max-w-5xl mt-10 space-y-6 md:space-y-0 md:space-x-6">
-      <div class="bg-white bg-opacity-10 backdrop-blur-md rounded-lg p-6 hover:bg-opacity-20 transition-all shadow-md w-full md:w-1/3">
-        <h2 class="text-2xl font-semibold text-[#75DCFF]">Contact Information</h2>
-        <ul class="mt-4 space-y-3">
-          <li>Email: <a href="mailto:123@gmail.com" class="text-[#72CDC1] hover:underline"></a></li>
-          <li>GitHub: <a href="https://github.com/yourgithub" class="text-[#72CDC1] hover:underline"></a></li>
-          <li>LinkedIn: <a href="https://linkedin.com/in/yourprofile" class="text-[#72CDC1] hover:underline"></a></li>
-        </ul>
+  <section id="skills-education" class="py-14 px-10 mx-10 bg-cyan-600 bg-opacity-10 backdrop-blur-md rounded-[30px]">
+    <div class="p-6">
+      <h2 class="text-3xl font-bold text-center mb-8">Skills & Education</h2>
+      <div class="relative border-l-2 border-cyan-700/50">
+        <div class="mb-8 ml-6">
+          <div class="p-6 rounded-r-[20px] shadow-md">
+            <h3 class="text-lg font-semibold text-cyan-300">Web Development Skills</h3>
+            <p class="mt-2">HTML, CSS, JavaScript, React</p>
+          </div>
+        </div>
+        <div class="mb-8 ml-6">
+          <div class="p-6 rounded-r-[20px] shadow-md">
+            <h3 class="text-lg font-semibold text-cyan-300">Education</h3>
+            <ul class="mt-2 space-y-1">
+              <li>Google IT Support Specialization</li>
+              <li>Google UX Design Specialization</li>
+              <li>The Complete 2023 Web Development Bootcamp</li>
+            </ul>
+          </div>
+        </div>
       </div>
+    </div>
+  </section>  
 
-      <div class="bg-white bg-opacity-10 backdrop-blur-md rounded-lg p-6 hover:bg-opacity-20 transition-all shadow-md w-full md:w-1/3">
-        <h2 class="text-2xl font-semibold text-[#75DCFF]">Technical Skills</h2>
-        <ul class="mt-4 space-y-3">
-          <li>HTML</li>
-          <li>CSS</li>
-          <li>JavaScript</li>
-          <li>React</li>
-        </ul>
+  <section id="projects" class="py-14 px-10 mx-10">
+    <div class="p-6">
+      <h2 class="text-3xl font-bold text-center mb-8">Projects</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div> <!--Project 1 as Card-->
+          <div> <!--Infor-->
+            <span>Website</span>
+            <h3>UI/UX Portfolio</h3>
+          </div>
+          <div> <!--Image of Website I want it will move down a little bit in y-axis when hovering-->
+            <div>
+              <figure>
+                <img src="" alt="">
+              </figure>
+            </div>
+          </div>
+        </div>
+
+        <div></div>
       </div>
     </div>
-    <div>
-      <h2>Project</h2>
-      <p>Though I am new to web development, here is beginner project I have worked on: </p>
-      <ul>
-        <li>UI/UX Portfolio - A simple website showcasing my learning Google UX Design Specialization</li>
-      </ul>
-    </div>
-    <div>
-      <h2>Education</h2>
-      <ul>
-        <li>Google IT Support Specialization</li>
-        <li>Google UX Design Specialization</li>
-        <li>The Complete 2023 Web Development Bootcamp - Udemy</li>
-      </ul>
-  </div>
+  </section>
   <footer>
-    <p>Created by AP</p>
+    <div>
+      <p>&copy; 2024 [Your Name]. All Rights Reserved.</p>
+      <div class="mt-2 space-x-4">
+        <a href="#" class="hover:text-white">GitHub</a>
+        <a href="#" class="hover:text-white">LinkedIn</a>
+        <a href="#" class="hover:text-white">Portfolio</a>
+    </div>
   </footer>
 </body>
 </html>
