Implement to React

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
           <div> <!--Image of Website I want it will move down a little bit in y-axis when hovering-->
             <div>
               <figure class="relative w-full h-48 overflow-hidden">
-                <img class="w-[150%] h-[150%] object-cover object-top-left transition-transform duration-300 ease-in-out group-hover:-translate-y-2"
+                <img class="w-[1100px] h-auto transition-transform duration-300 ease-in-out"
                 src="assets/images/ux-ui_portfolio.png" alt="">
               </figure>
             </div>
