--- a/public/index.html
+++ b/public/index.html
@@ -3,72 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web</title>
-  <link href="assets/css/index.css" rel="stylesheet">
-  
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
+  <title>AP CV</title>
 </head>
-<body class="bg-cyan-950 text-white">
-  <header class="w-screen h-80 md:h-96 z-1 relative flex flex-col justify-center items-center">
-    <h1 class="text-6xl md:text-8xl text-[#75DCFF] font-bold tracking-wider animate-fade-in">Hi, I'm ...</h1>
-    <p class="mt-4 text-xl md:text-2xl opacity-80 animate-slide-in">A Web Developer</p>
-  </header>
-
-  <section id="skills-education" class="py-14 px-10 mx-10">
-    <div class="p-6 bg-cyan-600 bg-opacity-10 backdrop-blur-md rounded-[30px]">
-      <h2 class="text-3xl font-bold text-center mb-8">Skills & Education</h2>
-      <div class="relative border-l-2 border-cyan-700/50 ml-6">
-        <div class="mb-8 ml-6">
-          <div class="p-6 rounded-r-[20px] shadow-md">
-            <h3 class="text-lg font-semibold text-cyan-300">Web Development Skills</h3>
-            <p class="mt-2">HTML, CSS, JavaScript, React</p>
-          </div>
-        </div>
-        <div class="mb-8 ml-6">
-          <div class="p-6 rounded-r-[20px] shadow-md">
-            <h3 class="text-lg font-semibold text-cyan-300">Education</h3>
-            <ul class="mt-2 space-y-1">
-              <li>Google IT Support Specialization</li>
-              <li>Google UX Design Specialization</li>
-              <li>The Complete 2023 Web Development Bootcamp</li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>  
-
-  <section id="projects" class="py-14 px-10 mx-10">
-    <div class="">
-      <h2 class="text-3xl font-bold text-center mb-10">Projects</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 w-full">
-        <div class="p-6 bg-amber-400/75 rounded-[30px] "> <!--Project 1 as Card-->
-          <div> <!--Infor-->
-            <span>Website</span>
-            <h3>UI/UX Portfolio</h3>
-          </div>
-          <div> <!--Image of Website I want it will move down a little bit in y-axis when hovering-->
-            <div>
-              <figure class="relative w-full h-48 overflow-hidden">
-                <img class="w-[1100px] h-auto transition-transform duration-300 ease-in-out"
-                src="assets/images/ux-ui_portfolio.png" alt="">
-              </figure>
-            </div>
-          </div>
-        </div>
-
-        <div></div>
-      </div>
-    </div>
-  </section>
-  <footer>
-    <div>
-      <p>&copy; AP. All Rights Reserved 2024</p>
-      <div class="mt-2 space-x-4">
-        <a href="#" class="hover:text-white">GitHub</a>
-        <a href="#" class="hover:text-white">LinkedIn</a>
-        <a href="#" class="hover:text-white">Portfolio</a>
-    </div>
-  </footer>
+<body className="bg-cyan-950 text-white">
+  <div id="root"></div>
 </body>
 </html>
