--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
   <title>...</title>
 </head>
-<body class="bg-cyan-100/50 dark:bg-cyan-950 text-cyan-950 dark:text-white transition-all duration-300">
+<body class="bg-cyan-100/50 dark:bg-cyan-950 text-cyan-900 dark:text-cyan-300 transition-all duration-300">
   <div id="root"></div>
 </body>
 </html>
